Update LivePlayActivity.java